# subtitle-parser

./: README.md  SubtitleItem.cpp  SubtitleItem.h  SubtitleParser.cpp
demo/: CMakeLists.txt  main.cpp
demo/lib/subtitle-parser/: SubtitleItem.cpp  SubtitleItem.h
